--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,35 @@
-name: Sync to Hugging Face hub
+name: Deploy to Hugging Face Space
+
 on:
   push:
     branches: [main]
-
-  # to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  sync-to-hub:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
-      - name: Push to hub
+
+      - name: Set Git user config
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Add Hugging Face remote and sync
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://preshnaib:$HF_TOKEN@huggingface.co/spaces/preshnaib/Search_Engine_llm main
+        run: |
+          git remote add hf https://preshnaib:${HF_TOKEN}@huggingface.co/spaces/preshnaib/Search_Engine_llm
+
+          # Fetch and merge remote Hugging Face changes
+          git fetch hf main || echo "Nothing to fetch from remote"
+          git merge hf/main --allow-unrelated-histories -m "Merge Hugging Face main"
+
+          # Push to Hugging Face
+          git push hf main
